--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.26.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
