--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.26.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.13.2",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
